mailback (1.0.3) UNRELEASED; urgency=medium

  * Avoid blank subject lines and bodies.
  * Add a basic test suite.

 -- P. S. Clarke <debs@pscl4rke.net>  Fri, 08 May 2020 12:37:40 +0100

mailback (1.0.2) unstable; urgency=medium

  * Fix python deps. Again.
    Because `python2` does not exist, but `python2.7` does.

 -- P. S. Clarke <debs@pscl4rke.net>  Sat, 10 Mar 2018 18:04:24 +0000

mailback (1.0.1) unstable; urgency=medium

  * Use GPLv3 as the licence.
  * Ensure python deps match the hashbangs.
  * Add a basic manpage.

 -- P. S. Clarke <debs@pscl4rke.net>  Sat, 10 Mar 2018 17:57:17 +0000

mailback (1.0.0) unstable; urgency=medium

  * Initial Release.

 -- P. S. Clarke <debs@pscl4rke.net>  Sat, 06 Jan 2018 20:54:26 +0000