@@ -12,4 +12,4 @@ install:
 
 
 test:
-	python2.7 -m unittest discover
+	python3 -m unittest discover
