@@ -2,6 +2,7 @@ mailback (1.0.3) UNRELEASED; urgency=medium
 
   * Avoid blank subject lines and bodies.
   * Add a basic test suite.
+  * Switch from Python 2 to Python 3.
 
  -- P. S. Clarke <debs@pscl4rke.net>  Fri, 08 May 2020 12:37:40 +0100
 
